--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
    <script src="./JS/HGH.JS"></script>
 </head>
 <body>
+
+    <p id="demo">hola</p>
+
+<script>
+
+
+document.getElementById("demo").color = "red";
+var person = {
+    nombre: "Juan",
+    lastName: "Doe",
+    pais:"Noruega",
+
+};
+
+</script>
     <H1>hola mis AMIGOS</H1>
 </body>
 </html>
