--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ var person = {
 
 </script>
     <H1>hola mis AMIGOS</H1>
+    <h2>chau</h2>
     <header>
         <div class="logo">
             <img src="./img/Computadora-Escritorio.png" alt="mercado liebre" >
