--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -7,17 +7,21 @@
     <title>Proceso de Producción - Materiales</title>
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- GOOGLE FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <!-- DISEÑO CSS -->
     <link rel="stylesheet" href="./style/index.css">
 </head>
-<body class="back-mat">
+<body class ="back-mat">
 
     <header>
-      <div class="contenedor"></div>
+      <div class ="contenedor">
        
-        <nav class="nav-principal">
-            <img src="img/Marivan.jpg" alt="Marivan LOGO" class="nav-logo">
-            <ul class nav="nav-menú">
+        <nav class ="nav-principal">
+            <img src ="img/Marivan.jpg" alt="Marivan LOGO" class="nav-logo">
+            <ul class ="nav-menu">
                 <li>
                     <a href="#">Inicio</a>
                 </li>
@@ -36,6 +40,7 @@
                 </li>
             </ul>
         </nav>
+      </div>
     </header>
     <main>
 
