--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/index.css">
     <title>Educacion tecnologica</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
    <script src="./JS/HGH.JS"></script>
 </head>
-<body>
+<body class ="inicio">
+
     <header>
         <div class="logo">
             <img src="./img/Computadora-Escritorio.png" alt="mercado liebre" >
