--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <!-- DISEÑO CSS -->
     <link rel="stylesheet" href="./style/index.css">
+    <script defer src="./JS/Mainpro.JS"></script>
 </head>
 <body class ="back-mat">
 
@@ -42,6 +43,21 @@
         </nav>
       </div>
     </header>
+    <div class="carrousel">
+        <div class="grande">
+            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
+            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+        </div>
+
+        <ul class="puntos">   
+            <li><button class="punto activo"></button></li>
+            <li><button class="punto"></button></li>
+            <li><button class="punto"></button></li>
+            <li><button class="punto"></button></li>
+        </ul>
+    </div>
     <main>
 
     </main>
