--- a/Maquinas.html
+++ b/Maquinas.html
@@ -12,6 +12,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+      <script defer src="./JS/Mainpro.JS"></script>
 </head>
 <body class ="back-maquina">
 
@@ -41,6 +42,21 @@
         </nav>
       </div>
     </header>
+        <div class="carrousel">
+            <div class="grande">
+                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
+                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+            </div>
+
+            <ul class="puntos">   
+                <li><button class="punto activo"></button></li>
+                <li><button class="punto"></button></li>
+                <li><button class="punto"></button></li>
+                <li><button class="punto"></button></li>
+            </ul>
+        </div>
     <main>
 
     </main>
