agregue las fuentes y empece con el form

--- a/Maquinas.html
+++ b/Maquinas.html
@@ -12,6 +12,14 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+      
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lobster&display=swap" rel="stylesheet">
       <script defer src="./JS/Mainpro.JS"></script>
 </head>
 <body class ="back-maquina">
@@ -42,6 +50,9 @@
         </nav>
       </div>
     </header>
+    <h1>
+        Máquinas y Herramientas
+    </h1>
         <div class="carrousel">
             <div class="grande">
                 <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
