--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -11,6 +11,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lobster&display=swap" rel="stylesheet">
     <!-- DISEÑO CSS -->
     <link rel="stylesheet" href="./style/index.css">
     <script defer src="./JS/Mainpro.JS"></script>
@@ -43,6 +52,9 @@
         </nav>
       </div>
     </header>
+    <h1>
+        Materias Primas e Insumos
+    </h1>
     <div class="carrousel">
         <div class="grande">
             <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
