imagenes carrousel-hover

--- a/Maquinas.html
+++ b/Maquinas.html
@@ -55,10 +55,10 @@
     </h1>
         <div class="carrousel">
             <div class="grande">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+            <img src="./img/Maquinas/prod4-pexels-adonyi-gábor-1409215.jpg" alt="Imagen 1" class="img" height="350">
+            <img src="./img/Maquinas/prod1-pexels-pixabay-162534.jpg" alt="Imagen 2" class="img" height="350">
+            <img src="./img/Maquinas/prod2-pexels-anna-shvets-4315565.jpg" alt="Imagen 3" class="img" height="350">
+            <img src="./img/Maquinas/prod3-pexels-miguel-á-padriñán-3930091.jpg" alt="Imagen 4" class="img" height="350">
             </div>
 
             <ul class="puntos">   
