--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <title>Proceso de Producción - Materiales</title>
+    <title>Materia prima e Insumo</title>
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- GOOGLE FONT-->
@@ -57,10 +57,10 @@
     </h1>
     <div class="carrousel">
         <div class="grande">
-            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
-            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
-            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
-            <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+            <img src="./img/Materia_Prima/prod4-pexels-quang-nguyen-vinh-4543857.jpg" alt="Imagen 1" class="img" height="350">
+            <img src="./img/Materia_Prima/prod1-pexels-anete-lusina-5247968.jpg" alt="Imagen 2" class="img" height="350">
+            <img src="./img/Materia_Prima/prod2-pexels-marina-leonova-7717462.jpg" alt="Imagen 3" class="img" height="350">
+            <img src="./img/Materia_Prima/prod3-pexels-trang-doan-1132047.jpg" alt="Imagen 4" class="img" height="350">
         </div>
 
         <ul class="puntos">   
