--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       
         <div class="carrousel">
             <div class="grande">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 1" class="img">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
-                <img src="/cursopython_edutec/img/vaner.jpg" alt="Imagen 2" class="img">
+                <img src="./img/Proc_Produc/prod1-pexels-pixabay-459728.jpg" alt="Imagen 1" class="img" height="350">
+                <img src="./img/Proc_Produc/prod2-pexels-cottonbro-5532664.jpg" alt="Imagen 2" class="img" height="350">
+                <img src="./img/Proc_Produc/prod3-pexels-karolina-grabowska-4219611.jpg" alt="Imagen 3" class="img" height="350">
+                <img src="./img/Proc_Produc/prod4-pexels-andrea-piacquadio-3811859.jpg" alt="Imagen 4" class="img" height="350">
             </div>
 
             <ul class="puntos">   
