--- a/index.html
+++ b/index.html
@@ -76,35 +76,44 @@
     <section>
         <div class="flex-container">
             <div class="flex-item1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                     nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
+                <h3>Definición</h3>
+                <p>El Proceso Productivo es el conjunto de operaciones planificadas de Transformación de determinados insumos y/o Materias Primas en Bienes o Servicios mediante la aplicación de un Procedimiento Tecnológico.</p>
+                <p>Un Proceso de Producción es un sistema de acciones que se encuentran interrelacionadas de forma dinámica y que se orientan a la transformación de ciertos elementos “Materia Prima”. De esa manera, los elementos de entrada pasan a ser elementos de salida,  “Productos”, tras un proceso en el que se incrementa su valor.</p>
+                
             </div>
             <div class="flex-item2">
-                <h2>chau</h2>
+                <img src="./img/Esquema Proceso de Producción.png" alt="">
             </div>
         </div>
 
 
-        <form action="#" method="#">
-            <label >Nombre</label>
-            <input type="text" placeholder="introduzca su nombre" id="nombre" name="nombre">
-            <label >Apellido</label>
-            <input type="text" placeholder="introduzca su Apellido" id="apellido" name="apellido">
-            <label >Colegio</label>
-            <input type="text" placeholder="introduzca su Colegio" id="colegio" name="colegio">
-            <label >Curso</label>
-            <input type="text" placeholder="introduzca su Curso" id="curso" name="curso">
-            <label >Mail</label>
-            <input type="text" placeholder="introduzca su Mail" id="mail" name="mail">
-            <label >Pregunta/Consulta</label>
-            <input type="text" placeholder="introduzca su Pregunta/Consulta" id="pregunta" name="pregunta">
-            <label for=""> si quieres agregue un archivo para complementar su duda</label>
-            <input type="file">
-            <button type="">Enviar</button>
-            <button type="">Limpiar</button>
+        <form action="#" method="#" id="formulario">
+            <section  class="form-register">
+                <h4>Formulario de Preguntas y/o Consultas</h4>
+                <label >Nombres</label>
+                <input class="controls" type="text" placeholder="introduzca su nombre" id="nombre" name="nombre">
+
+                <label >Apellido</label>
+                <input class="controls" type="text" placeholder="introduzca su Apellido" id="apellido" name="apellido">
+
+                <label >Colegio</label>
+                <input class="controls" type="text" placeholder="introduzca su Colegio" id="colegio" name="colegio">
+
+                <label >Curso</label>
+                <input class="controls" type="text" placeholder="introduzca su Curso" id="curso" name="curso">
+
+                <label >Mail</label>
+                <input  class="controls" type="email" placeholder="introduzca su Mail" id="mail" name="mail">
+
+                <label >Pregunta/Consulta</label>
+                <input class="controls" type="textarea" placeholder="introduzca su Pregunta/Consulta" id="pregunta" name="pregunta">
+
+                <label  for=""> Si quiere agregue un archivo para complementar su duda</label>
+                <input class="controls" type="file" >
+
+                <input class="botons" type="submit" value="Enviar">
+                <input class="botons" type="submit" value="Limpiar">
+            </section>
         </form>
     </section>
     <footer>
