flex materia prima

--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -70,9 +70,22 @@
             <li><button class="punto"></button></li>
         </ul>
     </div>
-    <main>
+    <div class="flex-principal">
+        <div class="flex-ppal1">
+            <h2>Definición</h2>
+            <h3 class="mat">Materias Primas</h3>
+            <p>Elementos usados en una línea de proceso, que se encuentran en un estado natural, o sea que no han sufrido modificación en cuanto a su estructura.</p>
+            <h3 class="mat">Insumo</h3>
+            <p>Materia ya procesada, que constituye un refuerzo para la creación de otros bienes o servicios.</p>
+            <p>Es un producto acabado en sí, que interviene en un proceso productivo y ayuda a desarrollar un producto terminado. </p>
+            <h3 class="mat">Materiales</h3>
+            <p>Son los denominados productos semielaborados, semiacabados o productos en proceso, que no constituyen definitivamente un consumo. Provienen de materias primas de origen, animal, vegetal o mineral, que se valen de mano de obra humana o maquinarias para la obtención de bienes y servicios.</p>
 
-    </main>
+        </div>
+        <div class="flex-ppal2">
+            <img src="./img/Esquema Proceso de Producción.png" alt="">
+        </div>
+    </div>
     <footer>
 
     </footer>
