--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="flex-item1">
                 <h3>Definición</h3>
                 <p>El Proceso Productivo es el conjunto de operaciones planificadas de Transformación de determinados insumos y/o Materias Primas en Bienes o Servicios mediante la aplicación de un Procedimiento Tecnológico.</p>
-                <p>Un Proceso de Producción es un sistema de acciones que se encuentran interrelacionadas de forma dinámica y que se orientan a la transformación de ciertos elementos “Materia Prima”. De esa manera, los elementos de entrada pasan a ser elementos de salida,  “Productos”, tras un proceso en el que se incrementa su valor.</p>
+                <p>Se puede considerar como un sistema de acciones que se encuentran interrelacionadas de forma dinámica y que se orientan a la transformación de ciertos elementos “Materia Prima”. De esa manera, los elementos de entrada pasan a ser elementos de salida,  “Productos”, tras un proceso en el que se incrementa su valor.</p>
                 
             </div>
             <div class="flex-item2">
