rutas entre paginas

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
               <img src ="img/Marivan.jpg" alt="Marivan LOGO" class="nav-logo">
               <ul class ="nav-menu">
                   <li>
-                      <a href="#">Inicio</a>
+                      <a href="./index.html">Inicio</a>
                   </li>
                   <li>
-                      <a href="#">Materiales</a>
+                      <a href="./Materia_prima.html">Materiales</a>
                   </li>
                   <li>
-                      <a href="#">Máquinas y Herramientas</a>
+                      <a href="./Maquinas.html">Máquinas y Herramientas</a>
                   </li>
               </ul>
               <ul class="nav-menu-derecha">
