agregando elformulario a las demas paginas

--- a/Maquinas.html
+++ b/Maquinas.html
@@ -68,9 +68,35 @@
                 <li><button class="punto"></button></li>
             </ul>
         </div>
-    <main>
+        <form action="#" method="#" id="formulario" class="formulario">
+            <section  class="form-register">
+                <h4>Formulario de Preguntas y/o Consultas</h4>
+                <label >Nombres</label>
+                <input class="nombre" type="text" placeholder="introduzca su nombre" id="nombre" name="nombre">
 
-    </main>
+                <label >Apellido</label>
+                <input class="apellido" type="text" placeholder="introduzca su Apellido" id="apellido" name="apellido">
+
+                <label >Colegio</label>
+                <input class="colegio" type="text" placeholder="introduzca su Colegio" id="colegio" name="colegio">
+
+                <label >Curso</label>
+                <input class="curso" type="text" placeholder="introduzca su Curso" id="curso" name="curso">
+
+                <label >Mail</label>
+                <input  class="mail" type="email" placeholder="introduzca su Mail" id="mail" name="mail">
+
+                <label >Pregunta/Consulta</label>
+                <textarea class="pregunta" name="pregunta" id="pregunta" cols="30" rows="10"></textarea>
+
+                <label  for=""> Si quiere agregue un archivo para complementar su duda</label>
+                <input class="archivo" type="file" >
+
+                <input class="botons" type="submit" value="Enviar">
+                <input class="botons" type="submit" value="Limpiar">
+                
+            </section>
+        </form>
     <footer>
 
     </footer>
