--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
           <nav class ="nav-principal">
               <img src ="img/Marivan.jpg" alt="Marivan LOGO" class="nav-logo">
               <ul class ="nav-menu">
-                  <li>
-                      <a href="./index.html">Inicio</a>
-                  </li>
-                  <li>
-                      <a href="./Materia_prima.html">Materiales</a>
-                  </li>
-                  <li>
-                      <a href="./Maquinas.html">Máquinas y Herramientas</a>
-                  </li>
+                <li>
+                    <a href="./index.html">Inicio</a>
+                </li>
+                <li>
+                    <a href="./Materia_prima.html">Materiales</a>
+                </li>
+                <li>
+                    <a href="./Maquinas.html">Máquinas y Herramientas</a>
+                </li>
               </ul>
               <ul class="nav-menu-derecha">
                   <li>
@@ -55,7 +55,7 @@
           </nav>
         </div>
       </header>
-      <h1>
+      <h1 class="borde">
         Proceso de Producción 
       </h1>
       
@@ -119,7 +119,25 @@
         </form>
     </section>
     <footer>
-        
+
+        <div class="container__footer">
+            <div class="box__footer">
+                <div class="terms">
+                    <p>Esta pagina se hizo con fines educativos, para ser presentada ante alumnos y nutrir su conocimiento sobre el tema en cuestión</p>
+                </div>
+            </div>
+            <div class="box__footer">
+                <h2>Redes Sociales</h2>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a> 
+                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+            </div>
+        </div>
+
+        <div class="box__copyright">
+            <hr>
+            <p>Todos los derechos reservados © 2022 <b>Marivan</b></p>
+        </div>
     </footer>
 </body>
 </html>
