transición titulo - flex materiales

--- a/Maquinas.html
+++ b/Maquinas.html
@@ -50,10 +50,10 @@
         </nav>
       </div>
     </header>
-    <h1>
-        Máquinas y Herramientas
+    <h1 class="bord-h1">
+        <a href="#"> Máquinas y Herramientas</a> 
     </h1>
-        <div class="carrousel">
+           <div class="carrousel">
             <div class="grande">
             <img src="./img/Maquinas/prod4-pexels-adonyi-gábor-1409215.jpg" alt="Imagen 1" class="img" height="350">
             <img src="./img/Maquinas/prod1-pexels-pixabay-162534.jpg" alt="Imagen 2" class="img" height="350">
@@ -97,8 +97,26 @@
                 
             </section>
         </form>
-    <footer>
+        <footer>
 
-    </footer>
+            <div class="container__footer">
+                <div class="box__footer">
+                    <div class="terms">
+                        <p>Esta pagina se hizo con fines educativos, para ser presentada ante alumnos y nutrir su conocimiento sobre el tema en cuestión</p>
+                    </div>
+                </div>
+                <div class="box__footer">
+                    <h2>Redes Sociales</h2>
+                    <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                    <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a> 
+                    <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+                </div>
+            </div>
+    
+            <div class="box__copyright">
+                <hr>
+                <p>Todos los derechos reservados © 2022 <b>Marivan</b></p>
+            </div>
+        </footer>
 </body>
 </html>
