--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           </nav>
         </div>
       </header>
-      <h1 class="borde">
-        Proceso de Producción 
+      <h1 class="bord-h1">
+       <a href="#"> Proceso de Producción</a> 
       </h1>
       
         <div class="carrousel">
