--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -52,9 +52,10 @@
         </nav>
       </div>
     </header>
-    <h1>
-        Materias Primas e Insumos
-    </h1>
+    <h1 class="bord-h1">
+        <a href="#"> Materias Primas e Insumos</a> 
+     </h1>
+  
     <div class="carrousel">
         <div class="grande">
             <img src="./img/Materia_Prima/prod4-pexels-quang-nguyen-vinh-4543857.jpg" alt="Imagen 1" class="img" height="350">
@@ -82,10 +83,18 @@
             <p>Son los denominados productos semielaborados, semiacabados o productos en proceso, que no constituyen definitivamente un consumo. Provienen de materias primas de origen, animal, vegetal o mineral, que se valen de mano de obra humana o maquinarias para la obtención de bienes y servicios.</p>
 
         </div>
-        <div class="flex-ppal2">
-            <img src="./img/Esquema Proceso de Producción.png" alt="">
+       <div class="flex-ppal2">
+           <h2> Videos de Consulta</h2>
+        <div class="flex-video1">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/B8FMSxLgF0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </div>
+         <div class="flex-video2">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/2JqyeY9eW3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+         </div>
+      
         </div>
-    </div>
+       </div>
+       </div>
     <form action="#" method="#" id="formulario" class="formulario">
         <section  class="form-register">
             <h4>Formulario de Preguntas y/o Consultas</h4>
@@ -117,6 +126,24 @@
     </form>
     <footer>
 
+        <div class="container__footer">
+            <div class="box__footer">
+                <div class="terms">
+                    <p>Esta pagina se hizo con fines educativos, para ser presentada ante alumnos y nutrir su conocimiento sobre el tema en cuestión</p>
+                </div>
+            </div>
+            <div class="box__footer">
+                <h2>Redes Sociales</h2>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a> 
+                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+            </div>
+        </div>
+
+        <div class="box__copyright">
+            <hr>
+            <p>Todos los derechos reservados © 2022 <b>Marivan</b></p>
+        </div>
     </footer>
 </body>
 </html>
