--- a/Maquinas.html
+++ b/Maquinas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Máquinas y Herramientas</title>
     <link rel="stylesheet" href="./style/index.css">
+    <script  src="./JS/validation.js"></script>
       <!-- FONT AWESOME -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
       <!-- GOOGLE FONT-->
@@ -68,6 +69,34 @@
                 <li><button class="punto"></button></li>
             </ul>
         </div>
+        <div class="flex-principal">
+            <div class="flex-ppal-maquina">
+                <h2>Definición</h2>
+                <h3 class="mat">Herramientas</h3>
+                <p> Son todos aquellos elementos de acción manual que tienen como propósito adecuar y aumentar las posibilidades de uso de las manos en la transformación de la materia.</p>
+                <p> Es un objeto simple que se crea o modifica para facilitar una tarea, que requiere la aplicación correcta de una energía.</p>
+                <p> La palabra "Herramienta" sugiere que se construye con hierro, pero se usa para designar cualquier utensilio, generalmente resistente que se utiliza para realizar trabajos mecánicos que demandan la aplicación de cierta fuerza física. Otra característica es que suelen utilizarse manualmente.</p>
+                <p> En nuestro entorno cotidiano, contamos con gran variedad de herramientas con las que nos valemos  para realizar todas las tareas, como ser: cuchillos, pinzas, tijeras, destornilladores, sacacorchos, llaves, etc.</p>
+                <h3 class="mat">Máquinas</h3>
+                <p>Son un conjunto de piezas fijas y móviles que realizan un trabajo determinado.</p>
+                <p>Fueron creadas por el hombre, buscando reducir el esfuerzo necesario para realizar una actividad, podría decirse que amplían las capacidades del hombre, haciendo posible la concreción de ciertos trabajos. </p>
+                <p>Con el fin de producir elementos o realizar una tarea determinada con bajos costos y en corto tiempo, se utilizan varias máquinas conectadas que realizan actividades específicas. Así se forman <b>Procesos de fabricación mecanizados</b>, que incluyen sensores que monitorean el funcionamiento de cada unas de las partes, permitiendo acciones más complejas.</p>
+                <h3 class="mat">Diferencias</h3>
+                <p>Las <b>Máquinas</b> se diferencian de las <b>Herramientas</b> porque éstas involucran el uso de <b>Energía</b> o <b>Sistemas mecánicos</b> que reducen el esfuerzo físicode quienes las operan.</p>
+    
+            </div>
+           <div class="flex-ppal-video-maquina">
+                <h2> Videos de Consulta</h2>
+                <div class="flex-video1-maq">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/lNzr302-6xM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="flex-video2-maq">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mmW-l_6GNkQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            
+            </div>
+           </div>
+
         <form action="#" method="#" id="formulario" class="formulario">
             <section  class="form-register">
                 <h4>Formulario de Preguntas y/o Consultas</h4>
