--- a/Materia_prima.html
+++ b/Materia_prima.html
@@ -31,7 +31,7 @@
       <div class ="contenedor">
        
         <nav class ="nav-principal">
-            <img src ="img/Marivan.jpg" alt="Marivan LOGO" class="nav-logo">
+            <img src ="./img/Marivan.JPG" alt="Marivan LOGO" class="nav-logo">
             <ul class ="nav-menu">
                 <li>
                     <a href="./index.html">Inicio</a>
