--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class ="contenedor">
          
           <nav class ="nav-principal">
-              <img src ="img/Marivan.jpg" alt="Marivan LOGO" class="nav-logo">
+              <img src ="./img/Marivan.JPG" alt="Marivan LOGO" class="nav-logo">
               <ul class ="nav-menu">
                 <li>
                     <a href="./index.html">Inicio</a>
